# llama-stack-provider-trl

./: ARCHITECTURE.md  MOE_IMPLEMENTATION_SUMMARY.md  README.md  README_FSDP.md  api.py  build_fsdp.yaml  chat_with_dpo_model.py  cursor_index_and_learn_the_codebase.md  experiment.ipynb  how_to_run.md  pyproject.toml  run.sh  run.yaml  run_fsdp.yaml  run_granite_moe.yaml  test_granite_moe_setup.py  test_inference_only.py
examples/: examples.ipynb
llama_stack_provider_trl/: config.py  post_training.py
llama_stack_provider_trl/recipes/: dpo_training_single_device.py
llama_stack_provider_trl_remote/: __init__.py  config.py  post_training.py  server.py
llama_stack_provider_trl_remote/recipes/: __init__.py  dpo_training_fsdp.py  train_fsdp.py
providers.d/remote/post_training/: trl_fsdp.yaml
scripts/: run-remote-fsdp-server.sh
