[project]
dependencies = [
    "llama-stack>=0.2.3",
    "trl==0.18.1",
    "transformers==4.52.4", 
    "datasets",
    "torch",
    "pydantic",
    "psutil",
    "accelerate",
    # Additional dependencies for remote FSDP provider
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

name = "llama-stack-provider-trl"
version = "0.1.0"
description = "TRL Provider for Llama Stack DPO Training"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack_provider_trl*", "llama_stack_provider_trl_remote*"] 